# 2

./: local.properties  settings.gradle
app/: build.gradle
app/release/: output.json
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tencent/yolov8ncnn/: DbHelper.java  DetectionCallback.java  MainActivity.java  VibratorHelper.java  Yolov8Ncnn.java
app/src/main/jni/: CMakeLists.txt  ndkcamera.cpp  ndkcamera.h  yolo.cpp  yolo.h  yolov8ncnn.cpp
app/src/main/res/layout/: image_select.xml  main.xml
app/src/main/res/values/: strings.xml
